--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^18.0.0-beta-f320ef88f-20211116",
-    "react-dom": "^18.0.0-beta-f320ef88f-20211116",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
